--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@microsoft/signalr": "^6.0.10",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
